product endpoints listed in docs
