# app/Http/Controllers/Api/ProductController.php
@@ -9,17 +9,17 @@ use App\Http\Requests\StoreProductRequest;
 use App\Http\Requests\FilterProductRequest;
 
 /**  @OA\Tag(
-    *     name="Products",
-    *     description="API Endpoints of Products"
-    * )
-    */
+ *     name="product",
+ *     description="All Endpoints of Product"
+ * )
+ */
 class ProductController extends Controller
 {
     /**
      * @OA\Get(
      *      path="/api/products",
      *      operationId="GetProductList",
-     *      tags={"Products"},
+     *      tags={"product"},
      *      summary="Get list of all products",
      *      description="Returns list of products",
      *      @OA\Response(
@@ -35,17 +35,17 @@ class ProductController extends Controller
     public function index()
     {
         $products = Product::join('product_variants', 'products.id', 'product_variants.product_id')
-        ->select(['products.id', 'products.title', 'products.standfirst', 'products.feature_image', DB::raw('min(product_variants.price) as price')])
-        ->groupBy('products.id')
-        ->get();
-            
+            ->select(['products.id', 'products.title', 'products.standfirst', 'products.feature_image', DB::raw('min(product_variants.price) as price')])
+            ->groupBy('products.id')
+            ->get();
+
         return response()->json(['status' => 'success', 'data' => $products]);
     }
 
     /**
      * @OA\Post(
      *      path="/api/products/filter",
-     *      tags={"Products"},
+     *      tags={"product"},
      *      summary="Get list of filtered products",
      *      @OA\Parameter(
      *          name="id",
@@ -71,61 +71,61 @@ class ProductController extends Controller
         $category = trim($request->get('category_id'));
         $title = trim($request->get('title'));
         $status = $request->has('status') ? trim($request->get('status')) : 'published';
-        
+
+        $conditions[] = ['products.status', '=', $status];
+
         if ($category != '') {
             $conditions[] = ['products.category_id', '=', $category];
         }
 
         if ($title != '') {
-            $conditions[] = ['products.title', 'LIKE', '%'.$title.'%'];
+            $conditions[] = ['products.title', 'LIKE', '%' . $title . '%'];
         }
 
-        $conditions[] = ['products.status', '=', $status];
-
-        $sort_by =  'date';
-        $sort =  'desc';
+        $sort_by =  'published_at';
+        $sort_order =  'desc';
         if ($request->has('sort')) {
-
-$sort_array = explode(' ', trim($request->get('sort')));
-
-$sort_by =  isset($sort_array[0]) ? trim($sort_array[0]) : 'published_at';
-        $sort =  isset($sort_array[1]) ? trim($sort_array[1]) : 'desc';
-
-
+            $sort_array = explode(' ', trim($request->get('sort')));
+            $sort_by =  isset($sort_array[0]) ? trim($sort_array[0]) : 'published_at';
+            $sort_order =  isset($sort_array[1]) ? trim($sort_array[1]) : 'desc';
         }
-        
 
-        // $fractal = new Manager();
+        $products = Product::join('product_variants', 'products.id', 'product_variants.product_id')
+            ->where($conditions)
+            ->select(['products.id', 'products.title', 'products.standfirst', 'products.feature_image', DB::raw('min(product_variants.price) as price')])
+            ->groupBy('products.id')
+            ->orderBy($sort_by, $sort_order)
+            ->get();
 
-        // $paginator = Activity::join('organisations', 'organisations.id', 'activities.organisation_id')
-        //             ->where($conditions)
-        //             ->orderBy($this->order_by, $this->order)
-        //             ->select(['activities.*'])
-        //             ->paginate(20);
-
-
-        $products = Product::join('product_variant_types', 'products.id', 'product_variant_types.product_id')
-        ->get(['products.id', 'products.title', 'product_variant_types.options']);
-        return response()->json(['data' => $products]);
+        return response()->json(['status' => 'success', 'data' => $products, 'c' => $conditions]);
     }
 
 
     /**
-     * Store a newly created resource in storage.
-     *
-     * @param  \Illuminate\Http\Request  $request
-     * @return \Illuminate\Http\Response
+     * @OA\Post(
+     *      path="/api/products",
+     *      tags={"product"},
+     *      summary="Store new product",
+     *      @OA\Response(
+     *          response=200,
+     *          description="Successful response"
+     *       ),
+     *       @OA\Response(
+     *          response=400,
+     *          description="Bad request"
+     *        )
+     *     )
      */
     public function store(StoreProductRequest $request)
     {
         return Product::create($request->all());
     }
 
-     /**
+    /**
      * @OA\Get(
      *      path="/api/products/{product_id}",
      *      operationId="Products",
-     *      tags={"Products"},
+     *      tags={"product"},
      *      summary="Get list of filtered products",
      *      description="Get list of filtered products",
      *      @OA\Parameter(
@@ -149,11 +149,24 @@ $sort_by =  isset($sort_array[0]) ? trim($sort_array[0]) : 'published_at';
     }
 
     /**
-     * Update the specified resource in storage.
-     *
-     * @param  \Illuminate\Http\Request  $request
-     * @param  int  $id
-     * @return \Illuminate\Http\Response
+     * @OA\Put(
+     *      path="/api/products/{product_id}",
+     *      tags={"product"},
+     *      summary="Update specified product",
+     *      @OA\Parameter(
+     *          name="product_id",
+     *          description="Product id",
+     *          required=true,
+     *          in="path",
+     *          @OA\Schema(
+     *              type="integer"
+     *          )
+     *      ),
+     *      @OA\Response(
+     *          response=200,
+     *          description="Successful response"
+     *       ),
+     *     )
      */
     public function update(Request $request, $product_id)
     {
@@ -161,10 +174,24 @@ $sort_by =  isset($sort_array[0]) ? trim($sort_array[0]) : 'published_at';
     }
 
     /**
-     * Remove the specified resource from storage.
-     *
-     * @param  int  $id
-     * @return \Illuminate\Http\Response
+     * @OA\Delete(
+     *      path="/api/products/{product_id}",
+     *      tags={"product"},
+     *      summary="Delete specified product",
+     *      @OA\Parameter(
+     *          name="product_id",
+     *          description="Product id",
+     *          required=true,
+     *          in="path",
+     *          @OA\Schema(
+     *              type="integer"
+     *          )
+     *      ),
+     *      @OA\Response(
+     *          response=200,
+     *          description="Successful response"
+     *       ),
+     *     )
      */
     public function destroy($product_id)
     {
